chore: Use helper method `app_name` instead of hard coded name

--- a/packages/church_mgmt_dashboard_portal/app/views/church_mgmt_dashboard_portal/dashboard/index.html.erb
+++ b/packages/church_mgmt_dashboard_portal/app/views/church_mgmt_dashboard_portal/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-4">
-  <h1 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Church Administration Dashboard</h1>
+  <h1 class="text-3xl font-bold leading-none text-gray-900 dark:text-white"><%= app_name %></h1>
 </div>
 <div class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
   <div class="flex items-center justify-between mb-4">
