feat: Implement ministry and ministry membership feature
This update also removes the `roles` table to make this a bit more
simpler and easier. Instead of the polymorphic roles table, there is a
role field on the tables that need them.

--- a/packages/church_mgmt_dashboard_portal/app/views/plutonium/_resource_header.html.erb
+++ b/packages/church_mgmt_dashboard_portal/app/views/plutonium/_resource_header.html.erb
@@ -26,7 +26,7 @@
             end
           end
           if current_user.role.present?
-            section.with_link(label: current_user.role.to_label, href: "#") do |link|
+            section.with_link(label: current_user.role, href: "#") do |link|
               link.with_leading do
                 render Phlex::TablerIcons::Heart.new(class: "mr-2 text-gray-400 w-4 h-4")
               end
